# QA

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quick-sh  requirements.txt  tsconfig.json
.github/workflows/: ci.yml
api/: deps.py  main.py
api/routers/: results.py  run.py  tests.py
cli/: main.py
cli/commands/: __init__.py  add_cmd.py  delete_cmd.py  edit_cmd.py  export_cmd.py  git_helper.py  list_cmd.py  register_cmd.py  run_cmd.py
core/: __init__.py  config.py  constants.py  db.py  git_export.py  logging.py  query_builder.py  schema.py
docs/: ai-unblock-guide.md  how-to-add-a-test.md  test-template.json
docs/deprecated/: python-guide.md  usage-guide.md
docs/phase-0/: estrategia.md  strategy.md
docs/strategy/: 0-roadmap.md  1-roadmap.md  2-roadmap.md  3-roadmap.md  4-roadmap.md  5-roadmap-md  6-roadmap.md
hooks/: commit-msg  install.sh  log_hook.sh  pre-commit  pre-push
minibaas/: .dockerignore
prismatica-qa/: README.md
prismatica-qa/docs/: how-to-add-a-test.md
prismatica_qa/: __init__.py  catalog.py  cli.py  env.py  files.py  models.py  mongo.py  runner.py
prismatica_qa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qa/: README.md
qa/implementation/: README.md
runner/: bash_executor.py  ci.py  executor.py  registry_executor.py  results.py
scripts/: db.ts  migrate_v1_to_v2.py  seed.ts  validate.ts  verify_setup.py
trascendence_testing/: .gitignore  README.md  package.json  playwright.config.ts
(+70 files in other folders)
